@@ -15,7 +15,7 @@
  * SOFTWARE.
  */
 
-/* $Id: rbtdb.c,v 1.108.2.2 2000/09/12 19:14:20 gson Exp $ */
+/* $Id: rbtdb.c,v 1.108.2.3 2000/09/12 19:16:00 gson Exp $ */
 
 /*
  * Principal Author: Bob Halley
@@ -1083,24 +1083,11 @@ zone_zonecut_callback(dns_rbtnode_t *node, dns_name_t *name, void *arg) {
 		 * may clear search->wild.
 		 */
 		search->wild = ISC_FALSE;
-		if (found->type == dns_rdatatype_dname) {
-			/*
-			 * Finding a DNAME stops all further searching.
-			 *
-			 * Note: We return DNS_R_PARTIALMATCH instead of
-			 * DNS_R_DNAME here because that way zone_find()
-			 * does fewer result code comparisions.
-			 */
-			result = DNS_R_PARTIALMATCH;
-		} else if ((search->options & DNS_DBFIND_GLUEOK) == 0) {
+		if ((search->options & DNS_DBFIND_GLUEOK) == 0) {
 			/*
 			 * If the caller does not want to find glue, then
 			 * this is the best answer and the search should
 			 * stop now.
-			 *
-			 * Note: We return DNS_R_PARTIALMATCH instead of
-			 * DNS_R_DELEGATION here because that way zone_find()
-			 * does fewer result code comparisions.
 			 */
 			result = DNS_R_PARTIALMATCH;
 		} else {
